--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>AirBnB clone</title>
 </head>
 
 <body style="margin: 0; padding: 0;">
