--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="shortcut icon" href="images/icon.png">
+	<title>AirBnB clone</title>
     </head>
 
     <body>
