--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="stylesheet" href="styles/5-filters.css">
         <link rel="shortcut icon" href="images/icon.png">
+    	<title>AirBnB clone</title>
     </head>
     <body>
         <header>
