--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles/5-filters.css">
         <link rel="stylesheet" href="styles/6-filters.css">
         <link rel="shortcut icon" href="images/icon.png">
+    	<title>AirBnB clone</title>
     </head>
     <body>
         <header>
