--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles/6-filters.css">
         <link rel="stylesheet" href="styles/7-places.css">
         <link rel="shortcut icon" href="images/icon.png">
+    	<title>AirBnB clone</title>
     </head>
     <body>
         <header>
