--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="styles/7-places.css">
         <link rel="stylesheet" href="styles/8-places.css">
         <link rel="shortcut icon" href="images/icon.png">
+    	<title>AirBnB clone</title>
     </head>
     <body>
         <header>
