--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -6,14 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/4-filters.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/7-places.css">
-    <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="stylesheet" href="styles/101-places.css">
+    <link rel="stylesheet" href="styles/102-footer.css">
+    <link rel="stylesheet" href="styles/102-filters.css">
+    <link rel="stylesheet" href="styles/102-header.css">
+    <link rel="stylesheet" href="styles/102-places.css">
+    <link rel="stylesheet" href="styles/102-common.css">
     <link rel="icon" href="images/logo.png">
 </head>
 
@@ -47,10 +44,10 @@
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
                 <ul class="popover">
-                    <li>Spa</li>
-                    <li>Mininar</li>
-                    <li>Pool</li>
-                    <li>Laundry</li>
+                    <li>Internet</li>
+                    <li>TV</li>
+                    <li>Kitchen</li>
+                    <li>Iron</li>
                 </ul>
             </div>
             <button>Search</button>
@@ -60,7 +57,7 @@
             <article>
                 <h2>My home</h2>
                 <div class="price_by_night">
-                    <p>$150</p>
+                    <p>$80</p>
                 </div>
                 <div class="information">
                     <div class="max_guests">
@@ -114,7 +111,7 @@
             <article>
                 <h2>Tiny house</h2>
                 <div class="price_by_night">
-                    <p>$75</p>
+                    <p>$65</p>
                 </div>
                 <div class="information">
                     <div class="max_guest">
@@ -161,7 +158,7 @@
             <article>
                 <h2>A suite</h2>
                 <div class="price_by_night">
-                    <p>$58</p>
+                    <p>$190</p>
                 </div>
                 <div class="information">
                     <div class="max_guest">
@@ -177,16 +174,16 @@
                         <p>2 Bathrooms</p>
                     </div>
                 </div>
-                    <div class="User">
-                        <p><b>Owner: </b>Bill Zuckerberg</p>
-                    </div>
-                    <div class="description">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores magnam rerum debitis
-                            voluptatem dolore quae dolorem pariatur unde voluptas.
-                        </p>
-                    </div>
-                
+                <div class="User">
+                    <p><b>Owner: </b>Bill Zuckerberg</p>
+                </div>
+                <div class="description">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores magnam rerum debitis
+                        voluptatem dolore quae dolorem pariatur unde voluptas.
+                    </p>
+                </div>
+
             </article>
         </section>
     </div>
@@ -194,4 +191,3 @@
         <p>Best School</p>
     </footer>
 </body>
-</html>
